@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>pepperModules-ToolboxTextModules</artifactId>
-	<version>2.0.0-SNAPSHOT</version>
+	<version>1.1.1-SNAPSHOT</version>
 	<packaging>bundle</packaging>
 	<name>ToolboxTextModules</name>
 	<description>Modules bundle for the Pepper conversion framework for linguistic data.
@@ -148,7 +148,16 @@
 				</executions>
 			</plugin>
 			<!-- RELEASE PLUGIN -->
-			<!-- <plugin><groupId>org.apache.maven.plugins</groupId><artifactId>maven-release-plugin</artifactId><version>2.5.3</version><configuration><goals>deploy site-deploy</goals><tagNameFormat>@{project.version}</tagNameFormat></configuration></plugin>-->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<version>2.5.3</version>
+				<configuration>
+					<preparationGoals>clean verify keepachangelog:release scm:add -Dincludes=CHANGELOG.md</preparationGoals>
+					<goals>deploy site-deploy</goals>
+					<tagNameFormat>@{project.version}</tagNameFormat>
+				</configuration>
+			</plugin>
 			<!-- USE GITFLOW -->
 			<plugin>
 				<groupId>com.amashchenko.maven.plugin</groupId>
@@ -168,7 +177,7 @@
 						<versionTagPrefix>v</versionTagPrefix>
 					</gitFlowConfig>
 				</configuration>
-			</plugin> 
+			</plugin>
 			<!-- gpg sign -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -192,6 +201,21 @@
 				<configuration>
 					<skip>true</skip>
 				</configuration>
+			</plugin>
+			<!-- Set memory for Surefire plugin -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<forkCount>3</forkCount>
+					<reuseForks>true</reuseForks>
+					<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>co.enear.maven.plugins</groupId>
+				<artifactId>keepachangelog-maven-plugin</artifactId>
+				<version>2.1.1</version>
 			</plugin>
 		</plugins>
 		<extensions>
